allocate data for root dataset

--- a/config.yaml
+++ b/config.yaml
@@ -4,9 +4,9 @@ epochs: 50
 batch_size: 64
 dataset: "cifar10"
 iid: false
-alpha: 0.1
-K: 20
-PR: 1
-M: 0.15
+alpha: 0.1 # Parameter for Dirichlet sampling
+K: 20 # Total # of clients
+PR: 1.0 # Participation rate
+M: 0.15 # Percentage of byzantine clients
 method: "FedAvg" # Options: Krum, AutoGM, TrimmedMean, TrustFedKD
 attack: "Noise" # Options: Noise, ALIE, SF, Concentrate
